spectec/test/elab/neg/relation-input-hint-empty.t
  $ ./main.exe relation-input-hint-empty.spectec 2>&1
  error: malformed input hint: at least one input should be provided
    --> relation-input-hint-empty.spectec:5:1
    |
  5 | relation R: foo |- foo
    | ^^^^^^^^^^^^^^^^^^^^^^
    | ...
    = source: elab
  [1]
